Update drone pipeline. (#2323)
Signed-off-by: slawekb <259381811+slawomirbedraHO@users.noreply.github.com>

--- a/.drone-v1.yml
+++ b/.drone-v1.yml
@@ -57,6 +57,8 @@ steps:
         - push
       branch:
         - master
+    depends_on:
+      - Server-side unit tests
 
   # 2. Build and publish chain (in sequence)
 
